@@ -6,7 +6,7 @@ import org.apache.log4j.LogManager;
 import org.apache.log4j.Logger;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -22,7 +22,7 @@ public final class WebserverSetup {
 	public static void setup(File projectPath, String module, String namespace) {
 		final Path websitePath = projectPath.toPath().resolve("website/dist/website/browser");
 		final StringBuilder stringBuilder = new StringBuilder(String.format("package org.mtr.%s%sgenerated;", namespace, namespace.isEmpty() ? "" : "."));
-		stringBuilder.append("@javax.annotation.Nullable public final class WebserverResources{public static String get(String resource){switch(resource.startsWith(\"/\")?resource.substring(1):resource){");
+		stringBuilder.append("@org.jspecify.annotations.Nullable public final class WebserverResources{public static String get(String resource){switch(resource.startsWith(\"/\")?resource.substring(1):resource){");
 		iterateFiles(websitePath, stringBuilder);
 		stringBuilder.append("default:return null;}}}");
 		write(projectPath.toPath().resolve(String.format("%ssrc/main/java/org/mtr/%s%sgenerated/WebserverResources.java", module, namespace, namespace.isEmpty() ? "" : "/")), stringBuilder.toString());
@@ -55,7 +55,7 @@ public final class WebserverSetup {
 
 	private static String download(String url) {
 		try {
-			return IOUtils.toString(new URL(url), StandardCharsets.UTF_8);
+			return IOUtils.toString(URI.create(url).toURL(), StandardCharsets.UTF_8);
 		} catch (Exception e) {
 			LOGGER.error("", e);
 			return "";
